--- a/BlazorMicah.csproj
+++ b/BlazorMicah.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Pages\Monsters.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Monsters.razor" />
+  </ItemGroup>
+
 </Project>
